xfburn 0.x
==========

- Fix segfault when removing a file and one of its parent directory together

xfburn 0.2.0beta
================

- Use g_type_class_add_private everywhere
- Data composition and file browser use ExoTreeView instead of GtkTreeView
- Add DnD inside data composition
- Prevent having two 'New directory' entries in a data composition
- Add support of SAO mode (bug #2121)
- Add create directory action in data composition
- Prevent usage of empty filename in data composition
- Fix xfburn.desktop Categories entry as suggested by Charles A Edwards <eslrahc@bellsouth.net>
- Implement the add button in the data composition toolbar (bug #2097)
- Avoid segfault on exit when ~/.config/xfburn doesn't exist (bug #2095)
- Prevent cdrecord failure if there is a space in the path to an iso (bug #1198)

xfburn 0.1.0alpha
=================

- First public release
- Supports cdrw blanking, cd copying, creating iso, composition of files
