@@ -1,6 +1,8 @@
 xfburn 0.x
 ==========
 
+- Fix wrong get_speed call in burn iso dialog
+- Directory are sort before files in data composition
 - Fix segfault when removing a file and one of its parent directory together
 
 xfburn 0.2.0beta
